--- a/diffusion_nl/imitation_learning/configs/complete_action_space_goto.yaml
+++ b/diffusion_nl/imitation_learning/configs/complete_action_space_goto.yaml
@@ -3,8 +3,7 @@ goal_type: "language"
 seed: 42
 
 data:
-  directory: "../../data/GOTO/mixed_5000_4_3_False_demos"
-  filename: "dataset_5000.pkl"
+  datapath: "../../data/GOTO/mixed_83_4_0_False_demos/dataset_83.pkl"
   max_gap: 100
   batch_size: 128
   percentage: 0.8
@@ -30,7 +29,7 @@ training:
   accelerator: "gpu"
   gpus: [0]
   strategy: "ddp_find_unused_parameters_true"
-  max_epochs: 10
+  max_epochs: 500
 
 logging:
   entity: Niklas_hop
