Finished cleaning imitation learning

--- a/diffusion_nl/imitation_learning/configs/agent_heads_goto.yaml
+++ b/diffusion_nl/imitation_learning/configs/agent_heads_goto.yaml
@@ -36,7 +36,7 @@ logging:
   mode: disabled
   model_directory: "../../model_store"
   experiment_name: ""
-  tags: [""]
+  tags: ["test"]
 
 eval:
   eval: True
