--- a/diffusion_nl/diffusion_model/configs/goto_distractor.yaml
+++ b/diffusion_nl/diffusion_model/configs/goto_distractor.yaml
@@ -1,10 +1,10 @@
 ---
 data:
   dataset: "BabyAI"
-  data_path: ../../data/BOSSLEVEL/standard_500000_4_0_False_demos/dataset_500000.pkl
+  datapath: ../../data/GOTO/standard_5000_4_3_False_demos/dataset_5000.pkl
   action_spaces: [0]
   train_split: 0.75
-  batch_size: 512
+  batch_size: 128
   n_frames: 4
   n_context_frames: 10
   step_frequency: 1
@@ -16,19 +16,20 @@ data:
     batch_size: 4096
   mean: 5
   std: 5
-  example_path: ../../data/GOTO/GOTO_100_full_action_space_random.pkl
+  example_path: "../../data/EXAMPLES/goto_1_0_action_space_random.pkl"
 
 logging:
-  experiment_name: "test_edm"
+  experiment_name: "diffusion_planner"
   model_directory: "../../model_store"
-  project: DiffusionMultiAgent # Wandb project name 
-  entity: diffusion-boyz
-  tags: ["BabyAI","DiffusionPlanner","SampleEfficiency"]
+  project: DiffusionMultiAgent 
+  entity: ""
+  tags: ["BabyAI","DiffusionPlanner","GoToDistractor"]
+  mode: online
 
 env:
-  env_name: "BabyAI-BossLevel-v0" 
+  env_name: "BabyAI-GoToObj-v0" 
   use_agent_type: False
-  num_distractors: 7
+  num_distractors: 0
   accelerator: "gpu"
 
 model:
@@ -42,13 +43,13 @@ model:
   min_sigma: 0.002
   max_sigma: 80
   rho: 7 
-  lr: 0.00005
+  lr: 0.00002
   mean: 5
   std: 5
   use_instruction: True
   use_context: False
   cond_w: 0
-  image_size: 22
+  image_size: 8
   image_channel: 3
 
   eval:
@@ -72,13 +73,13 @@ model:
 
   load:
     load: False
-    checkpoint: /scratch-shared/nhoepner/experiments/diffusion_nl2/diffusion_nl/model_store/standard_go_to_large/DiffusionMultiAgent/70wkzq1r/epoch=544-step=200000.ckpt
+    checkpoint: ""
 
 evaluation:
   eval: True
   agent_type: "diffusion"
   planning_type: "ivd"
-  ivd_config_file: ./configs/ivd_goto.yaml
+  ivd_config_file: ./configs/ivd_goto_distractors.yaml
   cond_w: 0
   device: "cuda:0"
   num_envs: 512
