--- a/diffusion_nl/environments/babyai/configs/generate_examples.yaml
+++ b/diffusion_nl/environments/babyai/configs/generate_examples.yaml
@@ -3,5 +3,5 @@ seed: 42
 env: "goto"
 example_type: "action_space_random"
 num_distractors: 0
-save_directory: "../../../data/GOTO"
+save_directory: "../../../data/EXAMPLES"
 n_examples: 1
