--- a/diffusion_nl/diffusion_model/configs/ivd_goto.yaml
+++ b/diffusion_nl/diffusion_model/configs/ivd_goto.yaml
@@ -1,33 +1,33 @@
 ---
 0: 
-  ivd_model_path: ivd_model_all/DiffusionMultiAgent
-  ivd_model_name: 023r9dmw
-  ivd_model_checkpoint: checkpoints/epoch=499-step=9500.ckpt
+  ivd_model_path: UniversalPoliciesModels/IVD/GOTO
+  ivd_model_name: ""
+  ivd_model_checkpoint: goto_standard.ckpt
 1:
-  ivd_model_path: ivd_model_all/DiffusionMultiAgent
-  ivd_model_name: k4mwp4wu
-  ivd_model_checkpoint: checkpoints/epoch=499-step=9500.ckpt
+  ivd_model_path: UniversalPoliciesModels/IVD/GOTO
+  ivd_model_name: ""
+  ivd_model_checkpoint: goto_no_left.ckpt
 2:
-  ivd_model_path: ivd_model_all/DiffusionMultiAgent
-  ivd_model_name: qx1bc955
-  ivd_model_checkpoint: checkpoints/epoch=499-step=9500.ckpt
+  ivd_model_path: UniversalPoliciesModels/IVD/GOTO
+  ivd_model_name: ""
+  ivd_model_checkpoint: goto_no_right.ckpt
 3:
-  ivd_model_path: ivd_model_all/DiffusionMultiAgent
-  ivd_model_name: 2zidnhq0
-  ivd_model_checkpoint: checkpoints/epoch=499-step=9500.ckpt
+  ivd_model_path: UniversalPoliciesModels/IVD/GOTO
+  ivd_model_name: ""
+  ivd_model_checkpoint: goto_diagonal.ckpt
 4:
-  ivd_model_path: ivd_model_all/DiffusionMultiAgent
-  ivd_model_name: g6fwn25f
-  ivd_model_checkpoint: checkpoints/epoch=499-step=9500.ckpt
+  ivd_model_path: UniversalPoliciesModels/IVD/GOTO
+  ivd_model_name: ""
+  ivd_model_checkpoint: goto_wsad.ckpt
 5:
-  ivd_model_path: ivd_model_all/DiffusionMultiAgent
-  ivd_model_name: avu9ge1t
-  ivd_model_checkpoint: checkpoints/epoch=499-step=9500.ckpt
+  ivd_model_path: UniversalPoliciesModels/IVD/GOTO
+  ivd_model_name: ""
+  ivd_model_checkpoint: goto_dir8.ckpt
 6:
-  ivd_model_path: ivd_model_all/DiffusionMultiAgent
-  ivd_model_name: s1purv7g
-  ivd_model_checkpoint: checkpoints/epoch=499-step=9500.ckpt
+  ivd_model_path: UniversalPoliciesModels/IVD/GOTO
+  ivd_model_name: ""
+  ivd_model_checkpoint: goto_left_right.ckpt
 7:
-  ivd_model_path: ivd_model_all/DiffusionMultiAgent
-  ivd_model_name: iu90uvt3
-  ivd_model_checkpoint: checkpoints/epoch=499-step=9500.ckpt
+  ivd_model_path: UniversalPoliciesModels/IVD/GOTO
+  ivd_model_name: ""
+  ivd_model_checkpoint: goto_all_diagonal.ckpt
