--- a/diffusion_nl/diffusion_model/configs/mixed_agentid_goto.yaml
+++ b/diffusion_nl/diffusion_model/configs/mixed_agentid_goto.yaml
@@ -1,10 +1,10 @@
 ---
 data:
   dataset: "BabyAI"
-  data_path: ../../data/GOTO/standard_5000_4_3_False_demos/dataset_5000.pkl
-  action_spaces: [0]
+  datapath: ../../data/GOTO/mixed_83_4_0_False_demos/dataset_83.pkl
+  action_spaces: [0,1,2,3,4,5,6,7]
   train_split: 0.75
-  batch_size: 128
+  batch_size: 64
   n_frames: 4
   n_context_frames: 10
   step_frequency: 1
@@ -16,19 +16,20 @@ data:
     batch_size: 4096
   mean: 5
   std: 5
-  example_path: ../../data/GOTO/GOTO_100_full_action_space_random.pkl
+  example_path: ../../data/EXAMPLES/goto_1_0_action_space_random.pkl
 
 logging:
-  experiment_name: "test_edm"
+  experiment_name: "diffusion_planner"
   model_directory: "../../model_store"
-  project: DiffusionMultiAgent # Wandb project name 
-  entity: diffusion-boyz
-  tags: ["BabyAI","DiffusionPlanner","SampleEfficiency"]
+  project: DiffusionMultiAgent 
+  entity: ""
+  tags: ["BabyAI","DiffusionPlanner","GoTo","Mixed-Agent-ID"]
+  mode: online
 
 env:
   env_name: "BabyAI-GoToObj-v0" 
   use_agent_type: False
-  num_distractors: 3
+  num_distractors: 0
   accelerator: "gpu"
 
 model:
@@ -45,7 +46,7 @@ model:
   lr: 0.00002
   mean: 5
   std: 5
-  use_instruction: True
+  use_instruction: False
   use_context: True
   image_size: 8
   image_channel: 3
@@ -67,17 +68,17 @@ model:
     n_agents: 8
     n_frames: 4
     n_context_frames: 10
-    context_conditioning_type: action_space
+    context_conditioning_type: agent_id
 
   load:
     load: False
     checkpoint: ""
 
 evaluation:
-  eval: False
+  eval: True
   agent_type: "diffusion"
   planning_type: "ivd"
-  ivd_config_file: ./configs/ivd_goto_distractors.yaml
+  ivd_config_file: ./configs/ivd_goto.yaml
   device: "cuda:0"
   num_envs: 512
   max_timesteps: 15
