--- a/diffusion_nl/diffuser_agent/configs/goto_distractors_large.yaml
+++ b/diffusion_nl/diffuser_agent/configs/goto_distractors_large.yaml
@@ -1,16 +1,15 @@
 ---
 device: "cuda:0"
-env_name: "BabyAI-BossLevel-v0"
-env: "bosslevel" #
+env: goto_large
 action_model: "ivd"
-example_path: /scratch-shared/nhoepner/experiments/diffusion_nl2/diffusion_nl/data/GOTO/GOTO_1_full_action_space_random.pkl
+example_path: ../../data/EXAMPLES/goto_large_1_7_action_space_random.pkl
 evaluation_episodes: 1
 num_envs: 512
 max_timesteps: 100
 visualize: False
 visualize_traj: False
 n_example_frames: 10
-cond_w: 0
+
 
 embeddings:
   device: "cuda:0"
@@ -26,19 +25,15 @@ planning_type: "ivd"
 sampling_strategy: "ddpm"
 num_steps: 64
 action_space: 0
-num_distractors: 7 
+num_distractors: 3 
 model_type: "edm"
 model_store: ../../model_store
-ivd_model_path: ivd_model_all/DiffusionMultiAgent
-ivd_model_name: 2auwgoe3
-ivd_model_checkpoint: checkpoints/epoch=99-step=31300.ckpt
-dm_model_path: "standard_go_to_large/DiffusionMultiAgent"
-dm_model_name: "421fn7wu"
-dm_model_checkpoint: "epoch=682-step=500000.ckpt"
+ivd_config_file: "./configs/ivd_goto_distractors_large.yaml"
+checkpoint: ""
 
 logging:
   experiment_name: "evaluation_diffusion_agent"
   model_directory: "../../model_store"
   project: DiffusionMultiAgent # Wandb project name 
-  entity: diffusion-boyz
   tags: ["BabyAI","DiffusionPlanner","SampleEfficiency","Evaluation"]
+  mode: online
