--- a/diffusion_nl/environments/babyai/configs/goto_distractor_large.yaml
+++ b/diffusion_nl/environments/babyai/configs/goto_distractor_large.yaml
@@ -1,20 +1,20 @@
 ---
-fig_directory: ../figures/baby_ai
-seed: 1
-env: GOTO_DISTRACTOR_LARGE
-n_episodes: 25000
-num_workers: 32
-data_directory: ../../../data
 action_space: 0
+data_directory: ../../../data
+env: GOTO_DISTRACTOR_LARGE
+fig_directory: ../figures/baby_ai
 img_size: 128
-use_img_obs: False
 max_steps: 100
-debug: False
 minimum_length: 4
 num_distractors: 7
+num_workers: 32
+n_episodes: 25000
+seed: 42
 use_agent_type: False
+use_img_obs: False
 part: -1
 logging:
-  mode: disabled
-  project: ""
-  experiment_name: ""
+  mode: online
+  project: "DiffusionMultiAgent"
+  experiment_name: "data_generation_babyai"
+  tags: ["BabyAI","DataGeneration","GoToDistractorLarge"]
