--- a/diffusion_nl/imitation_learning/configs/agent_heads_goto.yaml
+++ b/diffusion_nl/imitation_learning/configs/agent_heads_goto.yaml
@@ -32,11 +32,13 @@ training:
 
 logging:
   entity: ""
-  project: ""
-  mode: disabled
+  project: "DiffusionMultiAgent"
+  mode: online
   model_directory: "../../model_store"
-  experiment_name: ""
-  tags: ["test"]
+  experiment_name: "imitation_learning"
+  tags: ["BabyAI","ImitationLearning","GoTo","AgentHeads"]
+
+
 
 eval:
   eval: True
