--- a/diffusion_nl/imitation_learning/configs/instruction_imitation_goto_distractors.yaml
+++ b/diffusion_nl/imitation_learning/configs/instruction_imitation_goto_distractors.yaml
@@ -33,11 +33,11 @@ training:
 
 logging:
   entity: ""
-  project: ""
-  mode: disabled
+  project: "DiffusionMultiAgent"
+  mode: online
   model_directory: "../../model_store"
-  experiment_name: ""
-  tags: [""]
+  experiment_name: "imitation_learning"
+  tags: ["BabyAI","ImitationLearning","GoToDistractors"]
 
 eval:
   eval: True
