--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,7 @@ dependencies = [
 "torchmetrics==1.2.0",
 "torchvision==0.15.1",
 "tqdm==4.66.1",
+"transformers==4.48.3",
 "triton==2.0.0",
 "typing_extensions==4.8.0",
 "urllib3==2.0.7",
