Added multi step planner support

--- a/universal_policies/diffuser_agent/configs/multi_step_planner.yaml
+++ b/universal_policies/diffuser_agent/configs/multi_step_planner.yaml
@@ -7,7 +7,7 @@ evaluation_episodes: 1
 num_envs: 512
 max_timesteps: 15
 visualize: False
-visualize_traj: False
+visualize_traj: True
 n_example_frames: 10
 
 embeddings:
@@ -20,7 +20,6 @@ embeddings:
 agent_type: 'diffusion'
 model:
 use_agent_type: False
-planning_type: "ivd"
 sampling_strategy: "ddpm"
 num_steps: 64
 action_space: 0
