--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
 "lightning-utilities==0.9.0",
 "MarkupSafe==2.1.3",
 "matplotlib==3.8.0",
+"minigrid @ git+https://github.com/NikeHop/Minigrid",
 "moviepy==1.0.3",
 "mpmath==1.3.0",
 "multidict==6.0.4",
